--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -370,7 +370,7 @@ div#block-igis-searchform {
             z-index:       3;
             input{
                 border-radius: 0px;
-                position: absolute;
+                // position: absolute;
                 width: 90px;
                 top: 15px;
                 transition: all 0.2s ease-in-out;
